--- a/Modacity/Modacity/ViewController/Practice/practice.storyboard
+++ b/Modacity/Modacity/ViewController/Practice/practice.storyboard
@@ -89,7 +89,7 @@
                                 <rect key="frame" x="0.0" y="539" width="375" height="88"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IQ1-62-FQs">
-                                        <rect key="frame" x="52" y="15" width="271.5" height="59"/>
+                                        <rect key="frame" x="38.5" y="15" width="298.5" height="59"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RCv-2m-rB4">
                                                 <rect key="frame" x="0.0" y="0.0" width="83" height="59"/>
@@ -157,19 +157,19 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wqN-DD-Abp">
-                                                <rect key="frame" x="181" y="-0.5" width="90.5" height="59"/>
+                                                <rect key="frame" x="181" y="-0.5" width="117.5" height="59"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mNZ-pS-4Il">
-                                                        <rect key="frame" x="0.0" y="0.0" width="90.5" height="59"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="117.5" height="59"/>
                                                         <connections>
                                                             <action selector="onFeedback:" destination="ruu-CR-fPU" eventType="touchUpInside" id="ohP-B3-PEN"/>
                                                         </connections>
                                                     </button>
                                                     <imageView userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_airplane" translatesAutoresizingMaskIntoConstraints="NO" id="a3a-zN-gl4">
-                                                        <rect key="frame" x="28" y="9.5" width="34" height="32"/>
+                                                        <rect key="frame" x="41.5" y="9.5" width="34" height="32"/>
                                                     </imageView>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feedback" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gkH-Nc-j21">
-                                                        <rect key="frame" x="20" y="45" width="50.5" height="14"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Beta Feedback" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gkH-Nc-j21">
+                                                        <rect key="frame" x="20" y="45" width="77.5" height="14"/>
                                                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="12"/>
                                                         <color key="textColor" red="1" green="1" blue="1" alpha="0.75" colorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
